--- a/index.html
+++ b/index.html
@@ -1,70 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>The Great Color Game</title>
-  </head>
-
-  <body>
-
-    <header class="container-fluid">
-
-      
-
-    </header>
-
-
-  </body>
-
-</html>
-
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Color Game</title>
   </head>
+
   <body>
-    
+
     <header class="container-fluid" id="header">
       <div class="container">
-        <h1>The Great<br><span class="winning-rgb">RGB</span></br>Color Game</h1>
+        <h1 class="font-weight-bold text-center">The Great<br><span class="winning-rgb">RGB</span></br>Color Game</h1>
       </div>
     </header>
 
     <section class="container-fluid" id="buttons">
       <div class="container">
-        <div class="row">
-          <p id="btn-reset">New Colors</p>
-          <p id="btn-easy">Easy</p>
-          <p id="btn-hard">Hard</p>
+        <div class="row d-flex">
+          <button class="btn text-uppercase mr-auto" id="btn-reset">New Colors</button>
+          <button class="btn text-uppercase" id="btn-easy">Easy</button>
+          <button class="btn text-uppercase ml-3" id="btn-hard">Hard</button>
         </div>
       </div>
     </section>
 
-    <section class="container-fluid" id="game-canvas">
+    <section class="container-fluid" id="squares">
       <div class="container">
-        <div class="row">
-          <div class="square col-4"></div>
-          <div class="square col-4"></div>
-          <div class="square col-4"></div>
-          <div class="square col-4"></div>
-          <div class="square col-4"></div>
-          <div class="square col-4"></div>
+        <div class="d-flex justify-content-between square-row">
+          <div class="square rounded"></div>
+          <div class="square rounded"></div>
+          <div class="square rounded"></div>
+        </div>
+        <div class="d-flex justify-content-between square-row">
+          <div class="square rounded"></div>
+          <div class="square rounded"></div>
+          <div class="square rounded"></div>
         </div>
       </div>
     </section>
 
     <script type="text/javascript" src="js/script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
   </body>
+
 </html>
