Add gitignore and fix folder structure

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="src/css/style.css">
     <title>Color Game</title>
   </head>
 
   <body>
 
-    <header class="container-fluid" id="header">
+    <header id="header">
       <div class="container">
         <h1 class="font-weight-bold text-center">The Great<br><span id="display-color">RGB</span></br>Color Game</h1>
       </div>
     </header>
 
-    <section class="container-fluid" id="nav">
+    <section id="nav">
       <div class="container">
         <div class="row d-flex">
           <button class="btn rounded-0 text-uppercase mr-auto" id="reset">New Colors</button>
@@ -29,7 +29,7 @@
       </div>
     </section>
 
-    <section class="container-fluid" id="game-canvas">
+    <section id="game-canvas">
       <div class="container">
         <div class="d-flex justify-content-between square-row">
           <div class="square rounded"></div>
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="src/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
